# databricks-sdk-python

./: .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-publish.yml  python-package.yml
CONTRIBUTION/: index.html
LICENSE/: index.html
account_resources/aws/: index.html
account_resources/azure/: index.html
account_resources/gcp/: index.html
contribution/: index.html
docs/: CONTRIBUTION.md  index.md  install.md  readme.md
docs/account/: index.md
docs/account_resources/: aws.md
docs/workspace_resources/: cluster_policies.md  clusters.md  instance_profiles.md  permissions.md  unity_catalog.md
examples/: aws_account_create.py  aws_workspace_create.py  cluster_policies.py  create_instance_profile.py  permissions.py  unity_catalog.py
install/: index.html
src/databricks_sdk_python/api_client/: client.py  utils.py
src/databricks_sdk_python/api_client/workspace/: client.py  cluster_policies.py  instance_profiles.py  permissions.py
src/databricks_sdk_python/resources/: base.py
tests/: conftest.py
tests/api_client/workspace/: test_cluster_policies.py  test_instance_profiles.py  test_permissions.py
tests/resources/workspace/: test_cluster_policies.py
workspace_resources/cluster_policies/: index.html
workspace_resources/clusters/: index.html
workspace_resources/instance_profiles/: index.html
workspace_resources/jobs/: index.html
workspace_resources/permissions/: index.html
workspace_resources/secrets/: index.html
workspace_resources/unity_catalog/: index.html
(+29 files in other folders)
